--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: screen_recorder_flutter
 description: A new Flutter plugin.
 version: 0.0.1
-author: Maugost Mtellect
+#author: Maugost Mtellect
 homepage: https://github.com/mtellect/flutter_screen_Recorder
 
 environment:
